# espire-eval

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
gemini_wrapper/: driver.py
internvl_wrapper/: driver.py
prompt/pick/: localizing.txt  moving.txt  moving_1.txt  moving_2.txt  query_rotation.txt  reflect_localizing.txt  reflect_moving.txt
prompt/place/: localizing.txt  moving.txt  moving_1.txt  moving_2.txt  query_rotation.txt  reflect_localizing.txt  reflect_moving.txt
qwen_wrapper/: driver.py  reflective_driver.py  rotation_driver.py
robobrain_wrapper/: driver.py  inference.py
src/espire_eval_common/: analyze.py  client.py  driver.py  image.py  start.py  utils.py
utils/: file.py  llm.py
